<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".login.view.LoginActivity">

    <TextView
        android:id="@+id/title_login"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/title_login"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_login">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/user_login"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/userLogin"
        app:layout_constraintStart_toStartOf="@+id/userLogin"
        app:layout_constraintTop_toBottomOf="@+id/userLogin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_login"
            android:inputType="numberPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/title_button_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
</android.support.constraint.ConstraintLayout>